<resources>
    //Login Activity
    <string name="app_name">BuddyList</string>
    <string name="etUsernameHint">Email</string>
    <string name="etPasswordHint">Password</string>
    <string name="buttontxt">Login</string>
    <string name="orDivider">------------------------- OR -------------------------</string>
    <string name="buttonRegisterLabel">Register</string>

    //Register Activity
    <string name="registerTitle">Create a new account</string>
    <string name="etNewEmailHint">New Email Address</string>
    <string name="etNewPasswordHint">New Password</string>
    <string name="etConfirmPasswordHint">Retype Password</string>
    <string name="etFNameHint">First Name</string>
    <string name="etLNameHint">Last Name</string>
    <string name="buttonLabelSubmit">Submit</string>

    //Menu
    <string name="toolbarMenuLogout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Create New Group
    <string name="tvNewGroupLabel">Create a New Group</string>
    <string name="etGroupNameHint">Enter a Group Name</string>
    <string name="inviteOnlySwitchLabel">Join By Invite Only</string>
    <string name="etGroupDesHint">Group Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
