<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.android.michael.buddylist.RegisterActivity">

    <TextView
        android:text="@string/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <EditText
        android:hint="@string/etNewEmailHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/etNewEmail"/>

    <EditText
        android:hint="@string/etNewPasswordHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/etNewPassword"/>

    <EditText
        android:hint="@string/etConfirmPasswordHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/etConfirmPassword"/>

    <EditText
        android:hint="@string/etFNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/etFName"
        />

    <EditText
        android:hint="@string/etLNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:id="@+id/etLName"
        />

    <Button
        android:text="@string/buttonLabelSubmit"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorSecondary"
        android:id="@+id/buttonSubmit"/>

</LinearLayout>
