<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.android.michael.buddylist.LoginActivity"
    android:weightSum="1">


    <ImageView
        android:id="@+id/buddyListLogo"
        android:layout_width="265dp"
        android:layout_height="104dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/buddylist_logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/etUsernameHint"
        android:id="@+id/etEmail"
        android:backgroundTint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/etPasswordHint"
        android:inputType="textPassword" />

    <Button
        android:text="@string/buttontxt"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorSecondary"
        android:id="@+id/buttonSignIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orDivider"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:text="@string/buttonRegisterLabel"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorSecondary"
        android:id="@+id/buttonSignUp"/>

</LinearLayout>
