<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.android.michael.buddylist.CreateGroupActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvNewGroupLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/tvNewGroupLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/etGroupNameHint" />

    <EditText
        android:id="@+id/etGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxHeight="100dp"
        android:maxLength="120"
        android:hint="@string/etGroupDesHint"
        android:inputType="textMultiLine" />

    <Switch
        android:id="@+id/byInviteOnlySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:isScrollContainer="true"
        android:switchMinWidth="40dp"
        android:text="@string/inviteOnlySwitchLabel"
        android:textAllCaps="false"
        android:textSize="18sp"
         />




</LinearLayout>
